Commit old changes before starting on Gatsby refactor.

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
     img.avatar(src=author.avatarURL)
     h3.author by&nbsp;
       a(href="/authors/#{author.display_name}") #{author.display_name}
-      |  on #{publishDate}
+      |  on #{publishDate}.
   | !{blogPostBody}
   h3.tags Tags
   div.tags
