--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,22 +45,12 @@ header h1 {
   font-weight: 300;
 }
 
-header a {
-  border: 1px solid #e81c4f;
-  border-radius: 290486px;
-  color: white;
-  font-size: 0.6em;
-  letter-spacing: 0.2em;
-  padding: 1em 2em;
-  text-transform: uppercase;
+a {
   text-decoration: none;
-  transition: none 200ms ease-out;
-  transition-property: color, background;
 }
 
-header a:hover {
-  background:  #e81c4f;
-  color: white;
+a:hover {
+  text-decoration: underline;
 }
 
 h1, h2, h3, h4 {
