Start building in actual content, and some initial styling improvements.

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -26,3 +26,13 @@ h1 {
 .cabin {
     font-family: Cabin,sans-serif;
 }
+
+a {
+  text-decoration: none;
+  color: orangered;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
