--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -10,14 +10,31 @@ html {
 }
 
 body {
-    font-family: Cabin,sans-serif;
+    font-family: Quattrocento,sans-serif;
+    font-size: 0.9em;
+    line-height: 1.4;
     color: #dddddd;
 }
 
 h1 {
-    font-size: 2em;
+    font-family: Cabin,sans-serif;
+    font-size: 2.5em;
     margin: .67em 0;
-  }
+}
+
+h2 h3 h4 h5 {
+    font-family: Cabin,sans-serif;
+}
+
+li > p {
+    margin: 10px 0;
+    line-height: 1.5;
+}
+
+li {
+    margin: 10px 0;
+    line-height: 1.4;
+}
 
 .quattrocento {
     font-family: Quattrocento,sans-serif;
