--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -19,7 +19,7 @@ body {
 h1 {
     font-family: Cabin,sans-serif;
     font-size: 2.5em;
-    margin: .67em 0;
+    margin: .67em 0 0 0;
 }
 
 h2 h3 h4 h5 {
