--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -36,6 +36,27 @@ li {
     line-height: 1.4;
 }
 
+code {
+    font-size: 0.9em;
+    color: #ffa;
+}
+
+pre > code {
+    font-size: 0.9em;
+    background-color: #000;
+    color: #0e0;
+}
+
+pre {
+    /* pre hacks to make code wrap in the container */
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    background-color: #000;
+}
+
 .quattrocento {
     font-family: Quattrocento,sans-serif;
 }
