--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -55,6 +55,7 @@ pre {
     white-space: -o-pre-wrap;    /* Opera 7 */
     word-wrap: break-word;       /* Internet Explorer 5.5+ */
     background-color: #000;
+    padding: 0.4em;
 }
 
 .quattrocento {
